# manifest

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  economic_simulation_design_conversation.md  economic_simulation_design_conversation_v2.md  package-lock.json  package.json
sim-core/: Cargo.toml  LEARNINGS.md
sim-core/docs/: DETERMINISM_CONTRACT.md  MIGRATION_SOA.md  MIGRATION_SOA_BEST_STATE.md  SOA_RUNTIME_FIX_PLAN.md  pop_dynamics.md  population_trap_analysis.md  stability_investigation_report_initial.md  stability_investigation_task.md
sim-core/specs/: labor-market-v3.md
sim-core/specs/current/: ASPIRATIONAL_DIRECTION_SPEC.md  CONVERGENCE_INVARIANTS_SPEC.md  MARKETS_LABOR_SPEC.md  README.md  TICK_STATE_SPEC.md
sim-core/specs/v1/: AI_BEHAVIOR.md  CONSUMPTION_WEALTH.md  DESIGN.md  FACILITIES_PRODUCTION.md  LABOR_MARKET.md
sim-core/specs/v2/: AI_BEHAVIOR.md  AUCTIONS.md  ENTITIES.md  README.md
sim-core/src/: accounting.rs  ai.rs  determinism.rs  entities.rs  external.rs  instrument.rs  lib.rs  market.rs  mortality.rs  needs.rs  state.rs  tick.rs  types.rs  world.rs
sim-core/src/agents/: merchant.rs  mod.rs  pop.rs  stockpile.rs
sim-core/src/consumption/: greedy.rs  mod.rs
sim-core/src/geography/: mod.rs  resources.rs  route.rs  settlement.rs
sim-core/src/labor/: bidding.rs  clearing.rs  mod.rs  skills.rs  subsistence.rs
sim-core/src/market/: clearing.rs  mod.rs  orders.rs
sim-core/src/pops/: consumption.rs  labor.rs  market.rs  mod.rs  tick.rs  types.rs  world.rs
sim-core/src/production/: execute.rs  facility.rs  mod.rs  recipe.rs
sim-core/tests/: carrying_capacity.rs  convergence.rs  convergence_baseline.rs  external_anchor.rs  invariants.rs  properties.rs  runtime_fixes.rs  single_good.rs  stability_investigation.rs
(+58 files in other folders)
