[package]
name = "sim-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tsify-next = { version = "0.5", features = ["js"] }
slotmap = { version = "1", features = ["serde"] }
js-sys = "0.3"

# For non-wasm testing
[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
