[package]
name = "sim-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["instrument"]
instrument = ["tracing", "polars"]

[dependencies]
wasm-bindgen = "0.2"
tracing = { version = "0.1", optional = true }
polars = { version = "0.46", optional = true, default-features = false, features = ["lazy", "fmt", "parquet"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
tsify-next = { version = "0.5", features = ["js"] }
slotmap = { version = "1", features = ["serde"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
rand = "0.9.2"

# For non-wasm testing
[dev-dependencies]
wasm-bindgen-test = "0.3"
